ghc-6.2/hslibs/win32/Win32HDC_stub_ffi.h

extern void* prim_setBkMode(HDC arg1,UINT arg2);
extern UINT access_prim_setBkMode_res1(HsPtr);
extern int access_prim_setBkMode_gc_failed(HsPtr);
extern void* access_prim_setBkMode_gc_failstring(HsPtr);
extern void* prim_getBkMode(HDC arg1);
extern UINT access_prim_getBkMode_res1(HsPtr);
extern int access_prim_getBkMode_gc_failed(HsPtr);
extern void* access_prim_getBkMode_gc_failstring(HsPtr);
extern void* prim_setBrushOrgEx(HDC arg1,int arg2,int arg3);
extern LONG access_prim_setBrushOrgEx_gc_res1(HsPtr);
extern LONG access_prim_setBrushOrgEx_gc_res2(HsPtr);
extern int access_prim_setBrushOrgEx_gc_failed(HsPtr);
extern void* access_prim_setBrushOrgEx_gc_failstring(HsPtr);
extern void* prim_getBrushOrgEx(HDC arg1);
extern LONG access_prim_getBrushOrgEx_gc_res1(HsPtr);
extern LONG access_prim_getBrushOrgEx_gc_res2(HsPtr);
extern int access_prim_getBrushOrgEx_gc_failed(HsPtr);
extern void* access_prim_getBrushOrgEx_gc_failstring(HsPtr);
extern void* prim_setTextAlign(HDC arg1,UINT arg2);
extern UINT access_prim_setTextAlign_res1(HsPtr);
extern int access_prim_setTextAlign_gc_failed(HsPtr);
extern void* access_prim_setTextAlign_gc_failstring(HsPtr);
extern void* prim_getTextAlign(HDC arg1);
extern UINT access_prim_getTextAlign_res1(HsPtr);
extern int access_prim_getTextAlign_gc_failed(HsPtr);
extern void* access_prim_getTextAlign_gc_failstring(HsPtr);
extern void* prim_setTextCharacterExtra(HDC arg1,int arg2);
extern int access_prim_setTextCharacterExtra_res1(HsPtr);
extern int access_prim_setTextCharacterExtra_gc_failed(HsPtr);
extern void* access_prim_setTextCharacterExtra_gc_failstring(HsPtr);
extern void* prim_getTextCharacterExtra(HDC arg1);
extern int access_prim_getTextCharacterExtra_res1(HsPtr);
extern int access_prim_getTextCharacterExtra_gc_failed(HsPtr);
extern void* access_prim_getTextCharacterExtra_gc_failstring(HsPtr);
extern void* prim_getMiterLimit(HDC arg1);
extern float access_prim_getMiterLimit_res1(HsPtr);
extern int access_prim_getMiterLimit_gc_failed(HsPtr);
extern void* access_prim_getMiterLimit_gc_failstring(HsPtr);
extern void* prim_setMiterLimit(HDC arg1,float arg2);
extern float access_prim_setMiterLimit_res1(HsPtr);
extern int access_prim_setMiterLimit_gc_failed(HsPtr);
extern void* access_prim_setMiterLimit_gc_failstring(HsPtr);
extern void* prim_saveDC(HDC arg1);
extern int access_prim_saveDC_res1(HsPtr);
extern int access_prim_saveDC_gc_failed(HsPtr);
extern void* access_prim_saveDC_gc_failstring(HsPtr);
extern void* prim_restoreDC(HDC arg1,int arg2);
extern int access_prim_restoreDC_gc_failed(HsPtr);
extern void* access_prim_restoreDC_gc_failstring(HsPtr);