ghc-6.2/hslibs/win32/Win32HDC.hs

       
setBkMode :: HDC -> BackgroundMode -> IO BackgroundMode
setBkMode arg1 arg2 =
  prim_setBkMode arg1 arg2
  >>= \ gc_result ->
  access_prim_setBkMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setBkMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setBkMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setBkMode" prim_setBkMode :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkMode_gc_failstring :: Addr -> IO (Addr)
getBkMode :: HDC -> IO BackgroundMode
getBkMode arg1 =
  prim_getBkMode arg1
  >>= \ gc_result ->
  access_prim_getBkMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getBkMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBkMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getBkMode" prim_getBkMode :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkMode_gc_failstring :: Addr -> IO (Addr)

setBrushOrgEx :: HDC -> Int -> Int -> IO POINT
setBrushOrgEx arg1 arg2 arg3 =
  prim_setBrushOrgEx arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_setBrushOrgEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_setBrushOrgEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_setBrushOrgEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setBrushOrgEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setBrushOrgEx" prim_setBrushOrgEx :: Addr -> Int -> Int -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBrushOrgEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBrushOrgEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBrushOrgEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBrushOrgEx_gc_failstring :: Addr -> IO (Addr)

getBrushOrgEx :: HDC -> IO POINT
getBrushOrgEx arg1 =
  prim_getBrushOrgEx arg1
  >>= \ gc_result ->
  access_prim_getBrushOrgEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getBrushOrgEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getBrushOrgEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBrushOrgEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getBrushOrgEx" prim_getBrushOrgEx :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBrushOrgEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBrushOrgEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBrushOrgEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBrushOrgEx_gc_failstring :: Addr -> IO (Addr)

setTextAlign :: HDC -> TextAlignment -> IO TextAlignment
setTextAlign arg1 arg2 =
  prim_setTextAlign arg1 arg2
  >>= \ gc_result ->
  access_prim_setTextAlign_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setTextAlign_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setTextAlign_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setTextAlign" prim_setTextAlign :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextAlign_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextAlign_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextAlign_gc_failstring :: Addr -> IO (Addr)
getTextAlign :: HDC -> IO TextAlignment
getTextAlign arg1 =
  prim_getTextAlign arg1
  >>= \ gc_result ->
  access_prim_getTextAlign_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getTextAlign_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getTextAlign_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getTextAlign" prim_getTextAlign :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextAlign_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextAlign_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextAlign_gc_failstring :: Addr -> IO (Addr)

setTextCharacterExtra :: HDC -> Int -> IO Int
setTextCharacterExtra arg1 arg2 =
  prim_setTextCharacterExtra arg1 arg2
  >>= \ gc_result ->
  access_prim_setTextCharacterExtra_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setTextCharacterExtra_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setTextCharacterExtra_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setTextCharacterExtra" prim_setTextCharacterExtra :: Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextCharacterExtra_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextCharacterExtra_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextCharacterExtra_gc_failstring :: Addr -> IO (Addr)
getTextCharacterExtra :: HDC -> IO Int
getTextCharacterExtra arg1 =
  prim_getTextCharacterExtra arg1
  >>= \ gc_result ->
  access_prim_getTextCharacterExtra_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getTextCharacterExtra_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getTextCharacterExtra_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getTextCharacterExtra" prim_getTextCharacterExtra :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextCharacterExtra_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextCharacterExtra_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextCharacterExtra_gc_failstring :: Addr -> IO (Addr)

getMiterLimit :: HDC -> IO Float
getMiterLimit arg1 =
  prim_getMiterLimit arg1
  >>= \ gc_result ->
  access_prim_getMiterLimit_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getMiterLimit_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMiterLimit_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getMiterLimit" prim_getMiterLimit :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getMiterLimit_res1 :: Addr -> IO (Float)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getMiterLimit_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getMiterLimit_gc_failstring :: Addr -> IO (Addr)

setMiterLimit :: HDC -> Float -> IO Float
setMiterLimit arg1 arg2 =
  prim_setMiterLimit arg1 arg2
  >>= \ gc_result ->
  access_prim_setMiterLimit_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setMiterLimit_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setMiterLimit_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setMiterLimit" prim_setMiterLimit :: Addr -> Float -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setMiterLimit_res1 :: Addr -> IO (Float)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setMiterLimit_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setMiterLimit_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------

saveDC :: HDC -> IO Int
saveDC arg1 =
  prim_saveDC arg1
  >>= \ gc_result ->
  access_prim_saveDC_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_saveDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_saveDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_saveDC" prim_saveDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_saveDC_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_saveDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_saveDC_gc_failstring :: Addr -> IO (Addr)

restoreDC :: HDC -> Int -> IO ()
restoreDC arg1 arg2 =
  prim_restoreDC arg1 arg2
  >>= \ gc_result ->
  access_prim_restoreDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_restoreDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_restoreDC" prim_restoreDC :: Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_restoreDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_restoreDC_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Macros for getting/selecting objects in HDCs
----------------------------------------------------------------





----------------------------------------------------------------
